# lets-cook-literally

./: .gitignore  Dockerfile  README.md  engineering.md  product.md  ui.md
backend/: .env.example  main.py  prompts.py  pyproject.toml
backend/tests/: conftest.py  test_main.py
frontend/: app.js  index.html  style.css
