[project]
name = "fridge-chef-backend"
version = "0.1.0"
description = "AI-powered Fridge to Recipe generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "google-genai>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyopenssl>=24.0.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
